fixed issue with Message type where File was a string instead of an object - added File class - added support for uploaded files on the hipchat web app room view in both the razer and the knockout template. - incremented beta version library

--- a/src/HipChat.Net/HipChat.Net.csproj
+++ b/src/HipChat.Net/HipChat.Net.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Http\IResponse.cs" />
     <Compile Include="Models\Request\SendNotification.cs" />
     <Compile Include="Models\Request\WebhookEvent.cs" />
+    <Compile Include="Models\Response\File.cs" />
     <Compile Include="Models\Response\Room.cs" />
     <Compile Include="Models\Response\Entity.cs" />
     <Compile Include="Models\Response\IMessage.cs" />
