Implemented create room, delete room, and delete webhook on rooms client. - new create room model - new validation for @mention parameter - updated package logo to latest

--- a/src/HipChat.Net/HipChat.Net.csproj
+++ b/src/HipChat.Net/HipChat.Net.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Http\IRequest.cs" />
     <Compile Include="Http\Response.cs" />
     <Compile Include="IHipChatClient.cs" />
+    <Compile Include="Models\Request\CreateRoom.cs" />
     <Compile Include="Models\Request\CreateWebhook.cs" />
     <Compile Include="Models\Request\MessageColor.cs" />
     <Compile Include="Models\Request\MessageFormat.cs" />
