Forked project from sirkirby.  Added support for sending private message to a user.

--- a/src/HipChat.Net/HipChat.Net.csproj
+++ b/src/HipChat.Net/HipChat.Net.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Models\Request\MessageFormat.cs" />
     <Compile Include="Models\Request\RoomPrivacy.cs" />
     <Compile Include="Http\IResponse.cs" />
+    <Compile Include="Models\Request\SendMessage.cs" />
     <Compile Include="Models\Request\SendNotification.cs" />
     <Compile Include="Models\Request\WebhookEvent.cs" />
     <Compile Include="Models\Response\File.cs" />
@@ -78,8 +79,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.2\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\portable-net45+win8+wpa81+wp8\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.20\lib\portable-net45+win8+wpa81\System.Net.Http.Extensions.dll</HintPath>
